<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="fa">
    <string name="app_name">به نوبت</string>
    <string name="welcome_message">خوش آمدید! برای رزرو نوبت وارد شوید</string>
    <string name="login_title">ورود به حساب</string>
    <string name="logo_content_description">نشان به نوبت</string>
    <string name="mobile_phone">شماره موبایل</string>
    <string name="email_or_mobile">ایمیل یا شماره موبایل</string>
    <string name="login">ورود</string>
    <string name="logging_in">در حال ورود…</string>
    <string name="unexpected_error">خطای غیرمنتظره‌ای رخ داد</string>
    <string name="guest_login">ورود به‌عنوان مهمان</string>
    <string name="ask_for_account">حساب کاربری ندارید؟</string>
    <string name="sign_up">ثبت‌نام کنید</string>
    <string name="password">گذرواژه</string>
    <string name="search">جستجو</string>
    <string name="filter">فیلتر</string>
    <string name="sort">مرتب‌سازی</string>
    <string name="refresh">به‌روزرسانی</string>
    <string name="switch_theme">تغییر حالت شب و روز</string>
    <string name="more_options">گزینه‌های بیشتر</string>
    <string name="change_language">تغییر زبان</string>
    <string name="current_language">فا</string>
    <string name="language_persian">فارسی</string>
    <string name="language_english">English</string>
    <string name="language_arabic">العربية</string>
    <string name="orders_title">لیست سفارش‌ها</string>
    <string name="home_message">به برنامه به نوبت خوش آمدید</string>
    <string name="example_title">فعالیت نمونه</string>
    <string name="example_message">این یک صفحه نمونه است</string>
    <string name="error_invalid_identifier">ایمیل یا شماره موبایل معتبر وارد کنید</string>
    <string name="error_empty_password">گذرواژه الزامی است</string>
    <string name="error_invalid_credentials">ایمیل، شماره موبایل یا گذرواژه صحیح نیست</string>
    <string name="error_too_many_requests">تعداد تلاش‌ها زیاد است؛ کمی بعد دوباره امتحان کنید</string>
    <string name="error_service_unavailable">سرویس ورود موقتاً در دسترس نیست</string>
    <string name="error_network_unavailable">اتصال اینترنت را بررسی کنید</string>
    <string name="error_request_timed_out">زمان درخواست به پایان رسید؛ دوباره تلاش کنید</string>
</resources>
